# rmsfkit

./: .codecov.yml  .gitattributes  AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  references.bib
rmsfkit/: __init__.py  _version.py  rmsfkit.py
rmsfkit/tests/: test_rmsfkit.py
